--- a/freenasUI/storage/templates/storage/index.html
+++ b/freenasUI/storage/templates/storage/index.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="{{STATIC_URL}}js/angular.js"></script>
 <body>
 {% include 'nav.html' %}
-<h1>这个首页的东西</h1>
+<h1>这个存储池的东西</h1>
 </body>
 </head>
 </html>
