--- a/freenasUI/reporting/templates/reporting/index.html
+++ b/freenasUI/reporting/templates/reporting/index.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 <title>HIKDATA</title>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap-theme.css" />
 <script type="text/javascript" src="{{STATIC_URL}}js/angular.js"></script>
+<style>
+.reporting {
+  
+}
+</style>
+</head>
 <body>
 {% include 'nav.html' %}
-<h1>这个首页的东西</h1>
+<div class="reporting">
+
+</div>
 </body>
 </head>
 </html>
