--- a/freenasUI/reporting/templates/nav.html
+++ b/freenasUI/reporting/templates/nav.html
@@ -140,7 +140,7 @@ a.little:hover{
  </div>
  <div ng-if="flag">
   <div class="leftmenu" style="height:30px;">
-   <a class="lefta" style="font-size:10px;" href="#">存储池</a>
+   <a class="lefta" style="font-size:10px;" href="storage/pool">存储池</a>
  </div>
   <div class="leftmenu" style="height:30px;">
    <a class="lefta" style="font-size:10px;" href="#">文件系统</a>
