--- a/freenasUI/storage/templates/storage/pool.html
+++ b/freenasUI/storage/templates/storage/pool.html
@@ -54,10 +54,10 @@ hikApp.controller("poolCtrl",function($scope){
        <a class="newa">存储池</a>
    </div>
    <div style="position:absolute;top:30px;">
-      <button class="btn btn-success btn-lg"><a>创建存储池
+      <button class="btn btn-success btn-lg"><a href="makepool/">创建存储池
       </a></button> 
    </div>
-   <div style="position:relative;top:70px;width:100px;height:100px;background:red;"></div>
+   
    
 </div>
 
